--- a/vagrant/centos/Vagrantfile
+++ b/vagrant/centos/Vagrantfile
@@ -9,7 +9,9 @@ Vagrant.configure(2) do |config|
 
   # Chef
   config.vm.provision "chef_solo" do |chef|
-    chef.cookbooks_path = ["../cookbooks"]
+    chef.cookbooks_path = ["../cookbooks", "../site-cookbooks"]
+    chef.add_recipe "locale::ja_locale"
     chef.add_recipe "postgresql::server"
+    chef.add_recipe "setup::setup_postgresql"
   end
 end
